@@ -9,6 +9,7 @@ Cacti CHANGELOG
 -bug#0001182: Subdirectories are not secure and allow browsing
 -bug#0001191: Faulty IP address validation by ping.php script
 -bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
+-bug#0001215: Impossible to define a none availability with the client cli/add_device.php
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: initialization of snmp_auth when using SNMP=NONE
